res/style.css
article {
    font-family: verdana, sans-serif;
    word-wrap:break-word;
    break-word: all;
    padding-left: 20px;
}

.comment {
    padding-top: 10px;
    margin-left: 20px;
    padding-bottom: 5px;
}

article span a {
    font-weight: bold;
}

sup {
    color: #979797;
    font-size: 11px !important;
}

article span {
    color: #888888;
    font-size: 10px;
}

article span .upvotes {
    color: #ff8b24;
    font-weight: bold;
}

article span .downvotes {
    color: #9494ff;
    font-weight: bold;
}

.replies article {
    border-left: dotted 1px #cacaca;
}


.md blockquote {
    border-left: 2px solid rgb(51, 102, 153);
    margin-bottom: 5px;
    margin-left: 5px;
    margin-right: 15px;
    margin-top: 5px;
    padding-left: 4px;
}

.md p {
    margin-top: 8px;
    margin-bottom: 5px;
}

.md table {
    margin: 5px 10px;
    border-spacing: 2px;
    border-color: gray;
}

.md thead {
    vertical-align: middle;
}

.md tbody {
    display: table-row-group;
    vertical-align: middle;
}

.md td, .md th {
    border: 1px solid #9d9d9d;
    padding: 1px 3px;
}

#reddit {
    margin-top: 40px;
    padding-bottom: 40px;
    width: 628px;
    padding-right: 20px;
    box-sizing: border-box;
}

#reddit header {
    display: table;
    overflow: auto;
    font-size: 16px;
    padding: 20px;
    padding-bottom: 5px;
}

#reddit header .info a {
    color: #0066aa;
    width: 480px;
}

#reddit header .info {
    display: table-cell;
    vertical-align: middle;
}
#reddit header .info .tagline {
    color: rgb(136, 136, 136);
    font-size: 11px;
}

#reddit .redditSingleMessage {
    text-align: center;
    padding-left: 30px;
}

#reddit .redditError {
    padding-left: 20px;
    display: table;
}

#reddit .redditError img {
    display: table-cell;
    width: 120px;
    height: auto;
    vertical-align: middle;
}

#reddit .redditError div {
    box-sizing: border-box;
    width: 430px;
    display: table-cell;
    vertical-align: middle;
    padding-left: 20px;
}

#reddit .redditError div h1 {
    font-size: 120%;
    margin: 0;
}

#reddit .redditError div p {
    display: inline-block;
    color: #c92323;
}

article a {
    color: #336699;
    text-decoration: none;
}

article a:hover {
    text-decoration: underline;
}

.redditTab {
    position: relative;
    z-index: 1;
    font-family: verdana, sans-serif;
    padding-left: 10px;
    padding-right: 10px;
    margin: 0;
    margin-bottom: -1px;
    margin-left: -5px;
    height: 33px;
    background-color: #f8f8f8;
    background-image: linear-gradient(to bottom,#fcfcfc 0,#f8f8f8 100%);
    overflow: hidden;
    font-size: 12px;
    text-shadow: 0 1px 0 rgba(255,255,255,.5);
    border: 1px solid #d3d3d3;
    /*border-left: none;*/
    color: #333;
}

.redditTab:focus {
    outline: 0;
}

.redditTab.active {
    background-color: #fff;
    border: 1px solid #c6c6c6;
    border-bottom: 1px solid #fff;
    box-shadow: inset 0 1px 0 #ddd;
    background-image: none;
    z-index: 50;
}

.redditTab.border {
    border-left: 1px solid #d3d3d3;
}

.redditTab.active:hover {
    border-bottom: 1px solid #fff;
}

.redditTab:hover {
    border: 1px solid #9c9c9c;
    z-index: 50;
}

#redditTabs {
    position: relative;
    padding-left: 20px;
    border-bottom: 1px solid #d3d3d3;
}

#redditOverflow {
    position: relative;
    box-sizing: border-box;
    vertical-align: bottom;
    margin-left: -5px;
    width: 33px;
    height: 32px;
    background-color: #f8f8f8;
    background-image: linear-gradient(to bottom,#fcfcfc 0,#f8f8f8 100%);
    opacity: 0.5;
    border: 1px solid #d3d3d3;
    border-left: none;
    border-bottom: none;
}

#redditOverflow:focus {
    outline: 0;
}

#redditOverflow:hover {
    opacity: 1;
}

#redditOverflow img {
    position: absolute;
    top: 50%;
    left: 8px;
}

#redditOverflow ul {
    min-width: 130px;
    max-width: 250px;
    text-overflow: ellipsis;
    padding-top: 5px;
    padding-bottom: 5px;
    box-sizing: border-box;
    opacity: 1;
    border: 1px solid #ccc;
    border-radius: 2px;
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    background: #fff;
    margin-top: 30px;
    display: none;
    position: relative;
    white-space: nowrap;
    float: left;
    z-index: 100;
    -webkit-transition: opacity 1s ease-in;
    -moz-transition: opacity 1s ease-in;
    transition: opacity 1s ease-in;
}

#redditOverflow ul li {
    line-height: 1.8;
    padding-left: 10px;
    padding-right: 10px;
}

#redditOverflow ul li:hover {
    background: #333;
    color: #fff;
}

.at_gplus {
    position: absolute;
    right: 0;
    margin-top: 5px;
}

.at_gplus img {
    width: 24px;
    height: 24px;
}

.at_gplus:hover {
    -webkit-filter: brightness(120%);
    -moz-filter: brightness(120%);
    filter: brightness(120%);
}

.at_gplus:focus {
    outline: 0;
}

.at_gplus:active {
    -webkit-filter: brightness(80%);
    -moz-filter: brightness(80%);
    filter: brightness(80%);
}

.flair {
    display: inline-block;
    margin-right: .5em;
    padding: 0 2px;
    background: #f5f5f5;
    color: #555;
    border: 1px solid #ddd;
    border-radius: 2px;
}

#rcomments .collapse {
    font-family: verdana, sans-serif;
    font-size: 10px;
    padding-left: 20px;
    display: none;
    color: gray;
    font-style: italic;
    padding-top: 10px;
    padding-bottom: 5px;
}

#rcomments .collapse a {
    font-weight: bold;
    color: gray;
}

#rcomments .collapse a:hover {
    text-decoration: none;
}

.expandButton {
    font-style: normal;
}

.expandButton:hover,
.collapseButton:hover {
    text-decoration: underline;
}

.vote {
    text-align: center;
    margin-top: 12px;
    float: left;
    width: 15px;
}

header .vote {
    margin: 0;
    line-height: normal;
    margin-right: 10px;
    width: auto;
}

.postScore {
    text-align: center;
    color: #c6c6c6;
    font-weight: bold;
    font-size: small;
    padding-bottom: 5px;
}

.commentOptions a {
    color: #888 !important;
    font-weight: bold;
    font-size: 10px;
}

.liked {
    color: #FF8B60;
}

.disliked {
    color: #9494FF;
}

.arrow {
    display: inline-block;
    width: 100%;
    height: 14px;
    display: inline-block;
    cursor: pointer;
    background-position: center center;
    background-repeat: no-repeat;
    width: 15px;
    margin-left: auto;
    margin-right: auto;
    outline: none;
}

.commentTo,
.replyTo {
    color: rgb(136, 136, 136);
    font-size: 10px;
    cursor: pointer;
    font-weight: bold;
}

.commentTo:hover,
.replyTo:hover {
    text-decoration: underline;
}

.up {
    background-image: url(http://www.redditstatic.com/sprite-reddit.u1Nao8_niV4.png);
    background-position: -84px -799px;
    background-repeat: no-repeat;
}

.down {
    background-image: url(http://www.redditstatic.com/sprite-reddit.u1Nao8_niV4.png);
    background-position: -42px -799px;
    background-repeat: no-repeat;
}

.upmod {
    background-image: url(http://www.redditstatic.com/sprite-reddit.u1Nao8_niV4.png);
    background-position: -105px -799px;
    background-repeat: no-repeat;
}

.downmod {
    background-image: url(http://www.redditstatic.com/sprite-reddit.u1Nao8_niV4.png);
    background-position: -63px -799px;
    background-repeat: no-repeat;
}

#comment_main {
    padding-left: 20px;
}
#comment_reply {
    padding-top: 10px;
}

.textarea_comment {
    width: 100%;
    min-height: 100px;
}

.commentCancel,
.commentSubmit {
    border: 1px solid #d3d3d3;
    background: #f8f8f8;
    height: 29px;
    padding-left: 15px;
    padding-right: 15px;
    margin-right: 10px;
}

.commentCancel:hover,
.commentSubmit:hover {
    border-color: #c6c6c6;
    background: #f0f0f0;
    box-shadow: 0 1px 0 rgba(0,0,0,0.10);
}

.commentPreview {
    display: none;
    position: relative;
    min-height: 85px;
    width: 100%;
    background-color: rgb(240, 243, 252);
    margin-top: 20px;
    overflow: auto;
}

.commentPreview b {
    position: absolute;
    top: 10px;
    left: 5px;
}

.commentPreview h3 {
    color: #656565;
    font-size: 16px;
    position: absolute;
    top: 10px;
    right: 5px;
}

.commentPreviewContents {
    box-sizing: border-box;
    padding: 10px;
    background: repeating-linear-gradient(-45deg, transparent, transparent 40px, rgba(166,166,166,.07) 40px, rgba(166,166,166,.07) 80px);
    background-color: #fff;
    min-height: 50px;
    width: 100%;
    margin-top: 30px;
}

.redditUsername {
    padding-top: 5px;
    float: right;
}

.redditSpinner {
    height: 45px !important;
    width: 45px !important;
    margin: 0px auto !important;
    position: relative !important;
    margin-top: 40px;
    border-left: 6px solid #ffcda9 !important;
    border-right: 6px solid #ffcda9 !important;
    border-bottom: 6px solid #ffcda9 !important;
    border-top: 6px solid #ff6c00 !important;
    border-radius: 100% !important;
	-webkit-animation: spin .6s infinite linear;
	-moz-animation: spin .6s infinite linear;
	animation: spin .6s infinite linear;
}

#rcomments .redditSpinner {
    margin-top: 30px !important;
}

@keyframes "spin" {
    from {
        -webkit-transform: rotate(0deg);
   	    -moz-transform: rotate(0deg);
   	    transform: rotate(0deg);
    }
    to {
        -webkit-transform: rotate(359deg);
   	    -moz-transform: rotate(359deg);
   	    transform: rotate(359deg);
    }
}

@-moz-keyframes spin {
    from {
        -moz-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    to {
        -moz-transform: rotate(359deg);
        transform: rotate(359deg);
    }
}

@-webkit-keyframes "spin" {
    from {
        -webkit-transform: rotate(0deg);
        transform: rotate(0deg);
    }
    to {
        -webkit-transform: rotate(359deg);
        transform: rotate(359deg);
    }
}

